--- a/Movie-Store-Data/appsettings.json
+++ b/Movie-Store-Data/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "MovieDBContextConnection": "Server=DESKTOP-6CQ8Q1S\\SQLEXPRESS;Database=Movie-store-new;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MovieDBContextConnection": "Your connection string"
   }
 }
