--- a/Movie-Store-API/appsettings.json
+++ b/Movie-Store-API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieDBContextConnection": "Server=DESKTOP-6CQ8Q1S\\SQLEXPRESS;Database=Movie-store-new;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MovieDBContextConnection": "Your connection string"
   },
-  "Secretkey": "T(:?2f9@+Sa7OEYp]^<!111F`gS#Sf8I<B>]8D.OF)iUO#Z#@AmY])q_!O`-j7r"
+  "Secretkey": "Your secret key"
 }
