--- a/Movie-Store-API/Movie-Store-API.csproj
+++ b/Movie-Store-API/Movie-Store-API.csproj
@@ -97,4 +97,12 @@
     <ProjectReference Include="..\Movie-Store-Data\Movie-Store-Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
