--- a/Movie-Store-API/appsettings.json
+++ b/Movie-Store-API/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MovieDBContextConnection": "Server=DESKTOP-6CQ8Q1S\\SQLEXPRESS;Database=Movie-store;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "Secretkey": "T(:?2f9@+Sa7OEYp]^<!111F`gS#Sf8I<B>]8D.OF)iUO#Z#@AmY])q_!O`-j7r"
 }
