--- a/Movie-Store-FE/appsettings.json
+++ b/Movie-Store-FE/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,6 +7,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Secretkey": "T(:?2f9@+Sa7OEYp]^<!111F`gS#Sf8I<B>]8D.OF)iUO#Z#@AmY])q_!O`-j7r"
+  "Secretkey": "T(:?2f9@+Sa7OEYp]^<!111F`gS#Sf8I<B>]8D.OF)iUO#Z#@AmY])q_!O`-j7r",
+  "Api": "http://35.247.188.44"
 }
